2019-05-22  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.16.
	* doc/chopstx.texi (VERSION): 1.16.

2019-05-22  Evangelos Rigas <erigas@rnd2.org>

	* board/board-gnukey-ds.h: New.

2019-05-14  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.15.
	* doc/chopstx.texi (VERSION): 1.15.

2019-05-13  NIIBE Yutaka  <gniibe@fsij.org>

	* board/board-maple-mini.h: Assert USB D+ pull-up.
	* board/board-olimex-stm32-h103.h: Likewise.
	* board/board-stbee.h:Likewise.
	* board/board-stm32-primer2.h: Likewise.

	* mcu/usb-stm32f103.c: Don't use usb_lld_sys_init and
	usb_lld_sys_shutdown in SYS.
	* mcu/usb-stm32l4.c: Ditto.

2019-05-10  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_claim_irq): Check INTR before the call.

	* chopstx-cortex-m.c (chx_disable_intr): Have return value.
	* chopstx-gnu-linux.c (chx_disable_intr): Likewise.

2019-05-10  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/sys-stm32f103.c: SYS version 4.0.
	* mcu/sys-gnu-linux.c: Likewise.
	* mcu/sys-mkl27z.c: Likewise.
	* mcu/sys-stm32l4.c: Likewise.
	* mcu/sys-stm32f0.c: Likewise.

2019-05-08  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/sys-stm32f103.c (usb_lld_sys_shutdown, usb_lld_sys_init):
	Only cable config.

	* mcu/sys-stm32l4.c (usb_lld_sys_shutdown, usb_lld_sys_init):
	Likewise.

	* mcu/usb-st-common.c (usb_lld_init): Call chip specific routine.
	(usb_lld_shutdown): Likewise.

	* mcu/usb-stm32l4.c (usb_lld_init_chip_specific)
	(usb_lld_shutdown_chip_specific): New.

	* mcu/usb-stm32f103.c (usb_lld_init_chip_specific)
	(usb_lld_shutdown_chip_specific): New.

	* rules.mk (DEFS): Add -DUSE_SYS when USE_SYS.

2019-04-25  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart.h (BSCARD1, BSCARD2...): New.
	(BSCARD): Remove.

	* contrib/usart-stm32f103.c (usart_config_baud): Rename
	from usart_config_brr, changing API.
	* contrib/usart-stm32l4.c (usart_config_baud): Likewise.

2019-04-24  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/sys-stm32l4.c: New.
	* mcu/chx-stm32l4.c: New.  Not support suspend yet.